--- a/emazon/emazon.csproj
+++ b/emazon/emazon.csproj
@@ -14,4 +14,9 @@
     <None Remove="Views\Home\Page.xaml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
